# ai-chat-cli

./: .gitignore  README.md  aichat  build-deb.sh  pyproject.toml  requirements.txt  setup-venv.sh
.github/workflows/: release-deb.yml
chat_cli/: __init__.py  app.py  cli.py  clipboard_util.py  config.py  document_loader.py  history_store.py  suggestions.py  system_monitor.py  terminal_file_browser.py  ui.py
chat_cli/providers/: __init__.py  base.py  deepseek.py  gemini.py  localai.py  ollama.py  openai.py
chat_cli/tui/: __init__.py  app.py
