[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-chat-cli"
version = "1.0.0"
description = "DJ Chat Ai — chat AI cantik untuk Ollama dan LocalAI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
]

[project.optional-dependencies]
documents = [
    "Pillow>=10.0.0",
    "pypdf>=4.0.0",
    "pytesseract>=0.3.10",
    "python-docx>=1.1.0",
]

[project.scripts]
aichat = "chat_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chat_cli*"]
